# tn5250

./: .clang-format  .cvsignore  .gitignore  5250.terminfo  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  README.md  README.ssl  TODO  XTerm  Xdefaults  acconfig.h  autogen.sh  config-cmake.h.in  config.h.in  configure.ac  configure.in  dialogrc  mkinstalldirs  tn5250-48x48.xpm  tn5250-62x48.xpm  tn5250-config.in  tn5250.m4  tn5250.pc.in  tn5250.spec.in  us5250.map  xt5250.in
.github/workflows/: build.yml  lint.yml
curses/: .cvsignore  CMakeLists.txt  Makefile.am  cursesterm.c  cursesterm.h  tn5250.c
doc/: CMakeLists.txt  Makefile.am  lp5250d.1  rfc1205.txt  scs2ascii.1  scs2pdf.1  scs2ps.1  tn5250.1  tn5250rc.5
freebsd/: 5250keys  Makefile.am  README  sample.termcap
lib5250/: .cvsignore  CMakeLists.txt  Makefile.am  buffer.c  buffer.h  codes5250.h  conf.c  conf.h  dbuffer.c  dbuffer.h  debug.c  debug.h  display.c  display.h  field.c  field.h  macro.c  macro.h  menu.c  menu.h  printsession.c  printsession.h  record.c  record.h  scrollbar.c  scrollbar.h  scs-private.h  scs.c  scs.h  session.c  session.h  sslstream.c  stream-private.h  stream.c  stream.h  telnetstr.c  terminal.c  terminal.h  tn5250-private.h  tn5250.h  (+9 more)
linux/: 5250.terminfo  Makefile.am  README
lp5250d/: .cvsignore  CMakeLists.txt  Makefile.am  lp5250d.c  scs2ascii.c  scs2pdf.c  scs2ps.c
python/: Makefile.am  tn5250-python.c
slang/: Makefile.am  slangterm.c  slangterm.h
src/: .cvsignore  .lclintrc  5250d.c  Makefile.am  _tn5250_extra.i  buffer.c  buffer.h  codes3270.h  codes5250.h  conf.c  conf.h  cursesterm.c  cursesterm.h  dbuffer.c  dbuffer.h  debug.c  debug.h  display.c  display.h  field.c  field.h  formattable.c  formattable.h  getopt.c  host3270.c  host3270.h  host5250.c  host5250.h  lp5250d.c  macro.c  macro.h  menu.c  menu.h  portsnoop.c  printsession.c  printsession.h  py5250.py  record.c  record.h  scrollbar.c  (+36 more)
sun/: README.sun  xt5250-color.termcap  xt5250.termcap  xt5250.terminfo  xtermcolor.termcap
termcaps/: CMakeLists.txt
termcaps/freebsd/: Makefile.am  README  sample.termcap  us.5250.kbd
termcaps/linux/: 5250.tcap  5250.terminfo  Makefile.am  uk5250.map
termcaps/macos/: .cvsignore  5250.terminfo  CMakeLists.txt  Makefile.am  README
termcaps/macos/78/: xterm-5250
termcaps/sun/: Makefile.am  xt5250-color.terminfo
win32/: .cvsignore  CMakeLists.txt  Makefile.am  Makefile.in  Makefile.win.in  README.txt  afterinstall.txt  config.h  configure.bat  dftmap.c  lp5250d-win.c  mkconfig.c  resource.h  tn5250-res.rc  tn5250-win.c  tn5250_innosetup.iss.in  tn5250_netshare.iss.in  winterm.c
